--- a/index.html
+++ b/index.html
@@ -3,17 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
-
-    <h3>score:<span id="result"></span></h3>
-
-    <div class="grid">
-
+    <div id="welcome-screen">
+        <button type="button" class="btn btn-dark" id="start-btn">Start</button>
+        <button type="button" class="btn btn-info" id="info-btn">Info</button>
     </div>
-    
+    <div id="instructions-screen" class="hidden">
+        <p>instructions about how to play this game hope you like it will fill later</p>
+        <button type="button" class="btn btn-primary" id="home-btn">Home</button>
+    </div>
+    <div id="game-screen" class="hidden">
+        <h3>score:<span id="result"></span></h3>
+        <button type="button" class="btn btn-danger" id="quit-btn">Quit</button>
+        <div class="grid">
+        </div>
+    </div>
+    <div id="game-over-screen" class="hidden">
+        <button type="button" class="btn btn-primary" id="home-btn-2">Home</button>
+        <button type="button" class="btn btn-success" id="play-again-btn">Play Again</button>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="./script/script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
